--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,11 +3,11 @@ steps:
 - id: "Rodando app test"
   name: 'gcr.io/cloud-builders/go'
   env: ['PROJECT_ROOT=github.com/aguinelo/desafiocd']
-  args: ['test', './go/src']
+  args: ['test', './app/src']
 
 - id: "Image Build"
   name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/desafiocd:latest', './go']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/desafiocd:latest', './app']
   
 images:
 
