--- a/cloudbuild.prod.yaml
+++ b/cloudbuild.prod.yaml
@@ -12,3 +12,12 @@ steps:
   - id: "Pushing Image"
     name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/desafiocd:$SHORT_SHA']
+
+  - id: "Adjusting deployment file - k8s"
+    name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: '/bin/sh'
+    args:
+      - '-c'
+      - |
+        sed 's#img-app-deployment#gcr.io/$PROJECT_ID/desafiocd:$SHORT_SHA#g' .k8s/deployment.yml .k8s/deployment-new.yml;
+        cat .k8s/deployment-new.yml;
