--- a/cloudbuild.prod.yaml
+++ b/cloudbuild.prod.yaml
@@ -19,5 +19,6 @@ steps:
     args:
       - '-c'
       - |
-        sed 's#img-app-deployment#gcr.io/$PROJECT_ID/desafiocd:$SHORT_SHA#g' .k8s/app/deployment.yml .k8s/app/deployment-new.yml;
-        cat .k8s/app/deployment-new.yml;
+        ls
+        sed 's#img-app-deployment#gcr.io/$PROJECT_ID/desafiocd:$SHORT_SHA#g' k8s/app/deployment.yml k8s/app/deployment-new.yml;
+        cat k8s/app/deployment-new.yml;
